js fix for pointer event/z-index issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -323,6 +323,7 @@ body.home {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 1;
 }
 .footer .copyright__copy a:link,
 .footer .copyright__copy a:visited {
@@ -378,7 +379,6 @@ body.home {
   height: 100%;
   position: fixed;
   background: rgba(9, 9, 9, 0.8);
-  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -391,6 +391,7 @@ body.home {
   opacity: 0;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+  z-index: 2;
 }
 .menu-overlay__list {
   list-style: none;
@@ -427,6 +428,10 @@ body.home {
 
 .home .menu-overlay__list--item:nth-of-type(1) a {
   color: #61caff;
+}
+
+.pointer-event-none {
+  pointer-events: none;
 }
 
 .menu-overlay.open {
