--- a/styles/sass/components/_menu.scss
+++ b/styles/sass/components/_menu.scss
@@ -3,12 +3,12 @@
   height: 100%;
   position: fixed;
   background: rgba(9, 9, 9, 0.8);
-  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
   transition: all 0.4s;
+  z-index: 2;
 
   &__list {
     list-style: none;
@@ -41,7 +41,9 @@
   color: $color-blue;
 }
 
-
+.pointer-event-none {
+  pointer-events: none;
+}
 
 .menu-overlay.open {
   z-index: 2;
