--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  z-index: 1;
 
   & .copyright {
     &__copy {
